--- a/style.css
+++ b/style.css
@@ -301,12 +301,11 @@ background: linear-gradient(-45deg,
 .killer-img {
   border-radius: 20px;
   max-width: 600px;
+  max-height: 700px;
   object-fit: cover;
   display: block;
   margin: 0 auto;
 }
-
-
 
 
 .hidden {
