--- a/style.css
+++ b/style.css
@@ -239,8 +239,8 @@ background: linear-gradient(-45deg,
   object-fit: cover;
   display: block;
   margin: 0 auto;
-  margin-top: 100px;
-  margin-bottom: 100px;
+  /* margin-top: 100px;
+  margin-bottom: 100px; */
 }
 
 
